# classic_hunter

./: .python-version  pyproject.toml  selenium_test.py
notebooks/: make_model_db_exploration.ipynb  selenium_test.py.ipynb
